containmentlayoutmanager: guard against non-finite item geometry

containmentlayoutmanager: guard against non-finite item geometry

A malformed ItemGeometries entry containing "inf"/NaN was parsed via QString::toDouble() straight into the applet geometry and then applied as an infinite item size. That sends the desktop layout into a CPU-pegged loop, freezing plasmashell and breaking session D-Bus services (kuiserver etc.), which in turn crashes dependent apps.

Reject non-finite values on both sides:

- when parsing the saved layout, skip such entries so an existing corrupt config can no longer wedge the layout (the applet falls back to automatic placement);
- when serializing, skip items whose geometry is non-finite so the layout manager does not write such a value back to the config.

BUG: 522039

###